--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-porjc.css porjc.js
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/porjc.css"/>
+    <title>porjcet all</title>
+</head>
+<body>
+    <div>
+        <h1>Hello</h1>
+    </div>
+</body>
+</html>
